<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.game.gamesecond.GameFragment">

        <TextView
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:text="@string/word"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/word_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/word"
            android:gravity="center"
            android:text="@string/hasil"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/word_text"
            android:layout_marginTop="190dp"
            android:gravity="center"
            android:text="@string/angka"
            android:textColor="#000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_text"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/skip"
                android:textSize="15dp" />

            <Button
                android:id="@+id/got_it_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/go" />

            <TextView
                android:id="@+id/end_game"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/endgame"
                android:textSize="15dp" />
        </LinearLayout>
    </RelativeLayout>
</layout>
