<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.game.score.ScoreFragment">

        <TextView
            android:id="@+id/yourscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:text="@string/yourscore"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/yourscore"
            android:gravity="center"
            android:text="@string/hasilangka"
            android:textColor="#000"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hasil"
            android:layout_marginStart="155dp"
            android:layout_marginTop="60dp"
            android:text="@string/playagain" />
    </RelativeLayout>
</layout>
